--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
   
   <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
   <script>
+    const player = Stream(document.getElementById('stream-player'));
+    player.addEventListener('volumechange', () => {
+      console.log('volumechange!');
+    });
+    
     var videoListArr = [
       {
         id:"765a0286922574b4c89f51fda23628a2",
